# better-app-logging

./: .gitignore  .pr_agent.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-14-liquid-glass-toggle.md
src-tauri/: .gitignore  Cargo.toml  README.md  build-tauri.bat  build-tauri.sh  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: bundle-tooling-macos.sh  bundle-tooling-windows.ps1  installer-hooks.nsh
src-tauri/src/: frame.rs  http_server.rs  lib.rs  main.rs  parser.rs  pid_map.rs  search_shim.js  store.rs  tooling.rs  ws_server.rs
src-tauri/src/bridge/: android.rs  ios.rs  mod.rs
viewer/: applogs-viewer.html  logcat-viewer.html
