[package]
name = "applogs-viewer"
version = "1.0.0"
edition = "2021"
description = "Native cross-platform live log viewer for Android and iOS devices"
authors = ["Bragi"]
license = "MIT"

[lib]
name = "applogs_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
